{
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "6d892db9-72ac-49ea-b502-3970c36b2b24",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "641e35fd-07d2-478d-99bf-434da66e91a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "ca7dcb21-ba20-4e86-b904-85aa8db38987",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PressKey",
                    "type": "Button",
                    "id": "7aa5a140-2f1a-4e81-97ce-35b29a686105",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b42fe182-5055-4f79-b794-1e2a2bade703",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d082e1a-07c3-42f2-a52d-925bcba1ea7d",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fcd8275-c677-4582-81fc-fdaecaf9b815",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb5b2ec8-6628-4d63-953a-356bc771272c",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1870ff1c-8716-43ae-a20f-d149e8f47e90",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f98721d6-fa74-4fff-a3bc-9e77300dea91",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7babf6d-3b10-4c28-b322-d3a2a2b8c76c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af74daf6-1054-4eb1-b5cf-6b775c355466",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "f108aadc-6d4d-4443-8c98-de186e0a2cca",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "cadcaf2e-b94a-42cc-99b3-759be30be550",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6fdfc707-9549-4c8a-80fe-c7a9f9b55b91",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ad726b2-842a-472b-8272-e7b04fa6ed9e",
                    "path": "<Sensor>/{Back}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}